@@ -1,3 +1,11 @@
+2009-02-20  Jay Berkenbilt  <ejb@ql.org>
+
+	* libqpdf/QPDF.cc (QPDF::insertXrefEntry): when recovering the
+	cross-reference table, have objects we encounter later in the file
+	supersede those we found earlier.  This improves the chances of
+	being able to recover appended files with damaged cross-reference
+	tables.
+
 2009-02-19  Jay Berkenbilt  <ejb@ql.org>
 
 	* libqpdf/Pl_LZWDecoder.cc: correct logic error for previously
